add case for numbers that exist in the code but are not in the correct position

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -119,6 +119,11 @@ html, body {
     color: var(--background-glass-rose-darker);
 }
 
+.hint_dot > .exists_dot_number {
+    font-size: 1rem;
+    color: var(--dot-glass-white);
+}
+
 .hint_dot > .incorrect_dot_number {
     font-size: 1rem;
     color: var(--dot-glass-white);
