--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,5 +1,5 @@
 /* LOOKING AT THE SOURCE CODE IS CHEATING YOU CHEATER */
-/* codecracker | styles.css */
+/* codecracker | owen fiscus | https://github.com/owenfiscus/codecrack | styles.css */
 
 /* colors */
 :root {
